src/css/player.css
/* ... */
/* == Fullscreen ============= */
.om-player[data-fullscreen='true'] .om-controls {
    z-index: 2147483648;
}
.om-player video::-webkit-media-controls { 
    display: none !important;
}

/* == Captions =============== */
.om-captions {
    bottom: 0;
    color: #fff;
    display: none;
    font-weight: 400;
    left: 0;
    padding: 20px 0;
    position: absolute;
    text-align: center;
    transform: translateY(-40px);
    transition: -webkit-transform 0.3s ease;
    transition: transform 0.3s ease;
    transition: transform 0.3s ease,-webkit-transform 0.3s ease;
    width: 100%;
    z-index: 1;
}
.om-controls--hidden .om-captions {
    bottom: -32px;
}
.om-captions--on {
    display: block;
}
.om-captions > span {
    background: rgba(0, 0, 0, 0.7);
    box-decoration-break: clone;
    line-height: 150%;
    padding: 3px 10px;
}
.om-player__audio.om-captions--detected {
    background: transparent;
    min-height: 95px;
}
.om-player__audio.om-captions--detected .om-captions {
    bottom: -10px;
    padding: 0;
}
.om-player__audio.om-captions--detected .om-captions > span {
    background: transparent;
    color: #000;
}
.om-player__audio.om-captions--detected .om-controls {
    background: #000;
    bottom: auto;
}
.om-player__audio.om-captions--detected .om-settings {
    bottom: auto;
    top: 35px;
}
.om-controls .om-controls__captions--on:before {
    color: red;
}

/* WebVTT cues */
::cue { 
    color:#ccc;
}
video:-webkit-media-text-track-display {
    top: -15%;
}

/* === Ads =================== */
#om-ads {
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 1;
}
.om-ads--active {
    overflow: hidden;
}
.om-player[data-fullscreen='true'] #om-ads {
    z-index: 2147483647;
}

/* === Focus =================== */
.om-player:focus,
.om-player__play:focus,
.om-player > .om-controls > *:focus {
    outline: dotted 1px #999;
}
.om-player.om-player__keyboard--inactive:focus,
.om-player.om-player__keyboard--inactive .om-player__play:focus,
.om-player.om-player__keyboard--inactive > .om-controls > *:focus {
    outline: none;
}

